--- a/client/src/app.scss
+++ b/client/src/app.scss
@@ -1,5 +1,7 @@
 *{
-  font-family: -apple-system, system-ui, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji"; 
+  // font-family: -apple-system, system-ui, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji"; 
+  font-family: Bogle,Helvetica Neue,Helvetica,Arial,sans-serif; 
+  
 }
 
 .app{
